gateways/universal/gw-route-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apim-gw-wso2am-universal-gw-httproute
  namespace: apim-cp
spec:
  hostnames:
    - gw.wso2.com
  parentRefs:
    - name: wso2-apim-gateway
      sectionName: gateway-https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: apim-gw-wso2am-universal-gw-service
          port: 8280
          weight: 1
